# LLM_Agent

./: .env  .gitignore  .pylintsrc  README.md  agent_cli.py  call_function.py  check_litellm.py  config.py  connection_test.txt  generate_content.py  main.py  prompts.py  pyproject.toml  server.py  steps.md  test_get_file_content.py  test_get_files_info.py  test_tool_calling.py  verify_migration.py
agent/: call_function.py  generate_content.py  prompts.py
agent/functions/: cli.py  create_directory.py  get_file_content.py  get_files_info.py  remove_file.py  run_python_file.py  write_file.py
functions/: get_file_content.py  get_files_info.py  move_file.py  remove_directory.py  run_python_file.py  write_file.py
gui/: app.py  app.tcss  widgets.py
gui/agent_logic/: __init__.py  conversation_manager.py  tool_handler.py
sandbox/: .pylintrc
sandbox/calculator/: main.py  tests.py
scaffolds/: PLAN.md  STREAMING.md  steps.md
src/: bad_code.py
static/: index.html
test_files/: instructions.md
tests/: check_litellm.py  verify_migration.py
utils/: conversation_memory.py  file_operations.py  logger.py
